budget-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-app
  namespace: budget-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget-app
  template:
    metadata:
      labels:
        app: budget-app
    spec:
      containers:
      - name: budget-app
        image: evans22j/budget-app:latest
        ports:
        - containerPort: 3000
